# Signal-Decomposition-with-RNN-LSTM-and-Fully-Connected-Networks

./: .gitignore  README.md  main.py  pyproject.toml
config/: setup.json
data/: Y.npy  meta.json
docs/: PRD.md  PRD_fc_network.md  PRD_lstm_network.md  PRD_rnn_network.md  PROMPT_LOG.md  TODO.md  plan.md  walkthrough.md
results/: test_metrics.json
scripts/: build_data.py  evaluate.py  main.py
src/: __init__.py
src/signal_decomp/: __init__.py
src/signal_decomp/sdk/: __init__.py  sdk.py
src/signal_decomp/services/: __init__.py  dataset.py  generator.py  models.py  trainer.py  visualizer_anatomy.py  visualizer_bench.py
src/signal_decomp/shared/: config.py  constants.py  version.py
tests/unit/sdk/: test_sdk.py
tests/unit/services/: test_dataset.py  test_generator.py  test_models.py  test_trainer.py  test_visualizer.py
tests/unit/shared/: test_config.py
weights/: FC.pth  RNN.pth
