[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hw1-signal-decomp"
version = "2.0.0"
description = "HW1: Signal decomposition with FC, RNN, and LSTM"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
    "seaborn>=0.13.2",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
]

[tool.pytest.ini_options]
addopts = "-q --import-mode=prepend --cov=signal_decomp --cov-report=term-missing"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*"]

[tool.coverage.report]
fail_under = 85
show_missing = true

[tool.hatch.build.targets.wheel]
packages = ["src/signal_decomp"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]
